--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		
 		<dependency>
 	        <groupId>javax.xml.bind</groupId>
@@ -63,7 +68,6 @@
             <artifactId>jaxb-runtime</artifactId>
         </dependency>
 
- 
 	</dependencies>
 
 	<build>
